<resources>
    <string name="app_name">My Application4</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_main4">Main4Activity</string>

    <string name="pow">Powering London</string>
    <string name="empow">Empowering You</string>
    <string name="imageButton1">imageButton1</string>
    <string name="imageButton2">imageButton2</string>
    <string name="imageButton3">imageButton3</string>


    <string name="Back">Back</string>
    <string name="Compare">Compare</string>
    <string name="Ele">Electricity Usage</string>
    <string name="EleBill">Electricity Bill</string>
    <string name="$367.95">$367.95</string>
    <string name="imageButton4">imageButton4</string>
    <string name="compText">Compare with a neighbour</string>
    <string name="usage">Usage</string>
    <string name="bill">Bill</string>
    <string name="contacts">Contacts</string>
    <string name="suggestion">Suggestion</string>
    <string name="april_15_5_8">April 15 —————————— $5.8</string>

    <string-array name="items">
        <item>April 15, 2016</item>
        <item>April 16, 2016</item>
        <item>April 17, 2016</item>
        <item>April 18, 2016</item>
        <item>April 19, 2016</item>
        <item>April 20, 2016</item>
        <item>April 21, 2016</item>
        <item>April 22, 2016</item>
        <item>April 23, 2016</item>
        <item>April 24, 2016</item>
        <item>April 25, 2016</item>
    </string-array>

    <string-array name="items2">
        <item>March</item>
        <item>Day 1</item>
        <item>Day 2</item>
        <item>Day 3</item>
        <item>Day 4</item>
        <item>Day 5</item>
        <item>Day 6</item>
        <item>Day 7</item>
        <item>Day 8</item>
        <item>Day 9</item>
        <item>Day 10</item>
        <item>Day 11</item>
        <item>Day 12</item>
        <item>Day 13</item>
        <item>Day 14</item>
        <item>Day 15</item>
        <item>Day 16</item>
        <item>Day 17</item>
        <item>Day 18</item>
        <item>Day 19</item>
        <item>Day 20</item>
        <item>Day 21</item>
        <item>Day 22</item>
        <item>Day 23</item>
        <item>Day 24</item>
        <item>Day 25</item>
        <item>Day 26</item>
        <item>Day 27</item>
        <item>Day 28</item>
        <item>Day 29</item>
        <item>Day 30</item>
        <item>Day 31</item>
        <item>Day 32</item>
    </string-array>
    <string name="title_activity_graph">graph</string>

    <string-array name="items3">
        <item>March</item>
        <item>Average</item>
        <item>Day 1</item>
        <item>Day 2</item>
        <item>Day 3</item>
        <item>Day 4</item>
        <item>Day 5</item>
        <item>Day 6</item>
        <item>Day 7</item>
        <item>Day 8</item>
        <item>Day 9</item>
        <item>Day 10</item>
        <item>Day 11</item>
        <item>Day 12</item>
        <item>Day 13</item>
        <item>Day 14</item>
        <item>Day 15</item>
        <item>Day 16</item>
        <item>Day 17</item>
        <item>Day 18</item>
        <item>Day 19</item>
        <item>Day 20</item>
        <item>Day 21</item>
        <item>Day 22</item>
        <item>Day 23</item>
        <item>Day 24</item>
        <item>Day 25</item>
        <item>Day 26</item>
        <item>Day 27</item>
        <item>Day 28</item>
        <item>Day 29</item>
        <item>Day 30</item>
        <item>Day 31</item>
        <item>Day 32</item>
    </string-array>


</resources>
