<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="-15dp"
    android:paddingLeft="-15dp"
    android:paddingRight="-15dp"
    android:paddingTop="-15dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.zyy19.myapplication4.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@drawable/gradient">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:id="@+id/imageView"
        android:src="@drawable/logo10"
        android:layout_marginTop="115dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="590dp"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/bill"
            android:id="@+id/button3"
            android:background="@drawable/buttonpress"
            android:textSize="40sp"
            android:textColor="#ffffff"
            android:onClick="onClick"
            android:layout_weight="1"
            android:textAllCaps="false"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/usage"
            android:id="@+id/button4"
            android:background="@drawable/buttonpress2"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:onClick="onClick2"
            android:layout_weight="1"
            android:textAllCaps="false"/>
    </LinearLayout>

    <Button
        android:layout_width="176dp"
        android:layout_height="78dp"
        android:text="@string/contacts"
        android:id="@+id/button5"
        android:layout_gravity="center_horizontal"
        android:textSize="32sp"
        android:onClick="onClick3"
        android:background="@drawable/line"
        android:textColor="#700202"
        android:textAllCaps="false"
        android:layout_marginBottom="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
