<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="-15dp"
    android:paddingLeft="-15dp"
    android:paddingRight="-15dp"
    android:paddingTop="-15dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.zyy19.myapplication4.Main3Activity"
    tools:showIn="@layout/activity_main3">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:id="@+id/linearLayout2"
        android:background="@drawable/gradient3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Ele"
                android:id="@+id/textEle"
                android:textColor="#ffffff"
                android:textSize="40sp"
                android:layout_marginTop="20dp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="450dp"
            android:layout_height="40dp"
            android:background="#6F92B0"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp">

            <Spinner
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:id="@+id/spinner2"
                android:entries="@array/items2"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp" />

            <Spinner
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:id="@+id/spinner3"
                android:entries="@array/items3"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp" />
        </LinearLayout>

    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:id="@+id/usagechart"
        android:layout_above="@+id/billchart"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="200dp"/>


    <com.github.mikephil.charting.charts.LineChart
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:id="@+id/billchart"
        android:layout_marginBottom="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"/>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout5">

        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/Compare"
            android:id="@+id/compButton"
            android:background="@drawable/buttonpress2"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/suggestion"
            android:id="@+id/suggestionbutton"
            android:background="@drawable/buttonpress3"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-20dp"
        android:background="#325a7d">

    </LinearLayout>


</RelativeLayout>

